Tabs display better now (thanks for overflow trick by @laurakalbag). Fixed CSS regression affecting client side tests page from base.css.

--- a/views/css/base.css
+++ b/views/css/base.css
@@ -11,11 +11,6 @@ body
 	font-family:'Avenir Next','Helvetica Neue',Helvetica,Arial,sans-serif
 }
 
-div[role='main']
-{
-	margin: 0 auto;
-	max-width: 480px;
-}
 
 nav
 {
@@ -82,11 +77,14 @@ footer
 .tabs
 {
 	list-style-type: none;
-	padding-bottom: 5px;
+	/*padding-bottom: 5px;*/
 	border-bottom: 1px solid gray;
 	text-align:right;
 	padding-top: 48px;
+	padding-bottom: 0;
 	margin-bottom: 48px;
+	overflow: hidden;
+	display:block;
 }
 
 .tabs li
@@ -96,18 +94,19 @@ footer
 	border-left: 1px solid gray;
 	border-right: 1px solid gray;
 	margin-right: 6px;
-	padding: 6px 12px;
-	border-radius: 6px 6px 0 0 ;
+	margin-bottom:  0;
+	padding: 0px 12px;
+	-webkit-border-radius: 6px 6px 0 0;
+	border-radius: 6px 6px 0 0;
 	background-color: #eee;
 	float:right;
-	margin-top: -32px;
+	/*margin-top: -32px;*/
 }
 
 li.selected
 {
 	background-color: #ccc;
 	color: white;
-	padding-bottom: 7px;
 }
 
 .invisible
@@ -130,7 +129,7 @@ li.selected
   }
   li.selected
   {
-  	padding-bottom: 5px;
+  	/*padding-bottom: 5px;*/
   }
 
 }
